# embedded-project

./: README.md  mqttCon.py
MQTTCon/: main.py  mqttCon.py  pyproject.toml
backend/: requirements.txt
backend/src/camera_stream/: camera.py  server.py
controller/: controller.py
datastore/: Dockerfile  README.md  go.mod  main.go
datastore/influxdb-data/engine/data/91c7a406c0d06fc0/autogen/1/: 000000001-000000001.tsm
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
metrics/: compose.yml
metrics/influxdb-data/: influxd.bolt
mosquitto/: docker-compose.yml
mosquitto/data/: mosquitto.db
motorController/: MainMotorControllerMQTT.py  StepperController.py
motorController/test/: MainMotorController.py  ServoController.py  mqtt_test.py  stepperTest.py
scripts/: start-dev.sh
web/: README.md
web/backend/: pyproject.toml  requirements.pi.txt  requirements.txt
web/backend/src/camera_stream/: server.py
web/frontend/: components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/frontend/src/: App.vue  main.ts  style.css
web/frontend/src/components/: AppHeader.vue  Camera.vue  CameraFeed.vue  ErrorDisplay.vue  ThemeSwitch.vue
web/frontend/src/components/controls/: CameraFeed.vue  ControlPanel.vue  MotorControl.vue
web/frontend/src/components/layout/: AppFooter.vue  AppHeader.vue
web/frontend/src/services/: mqtt.ts
web/frontend/src/stores/: robotStore.ts  themeStore.ts
web/frontend/src/types/: robot.ts
web/frontend/src/views/: Dashboard.vue
web/scripts/: start-dev.sh
(+3 files in other folders)
