[project]
name = "backend"
version = "0.1.0"
description = "Flask backend for Pi camera streaming."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=2.3,<4.0",
    "flask-cors>=6.0.0",
    "opencv-python-headless>=4.8,<5.0",
    "numpy<2.0" # Crucial for OpenCV compatibility
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"